# useless-logind

./: COPYING  Makefile.am  configure.ac  libuseless-logind.c  libuseless-logind.h  libuseless-logind.pc.in  pam_useless_logind.c  pam_useless_logind.sym  useless-logind.c  useless-logind_messages.c  useless-logind_session.c
data/: useless-logind.service.in
packaging/: useless-logind.spec
systemd-compat/: Makefile.am  libsystemd-login.pc.in  loginctl.c  sd-login.c  sd-login.h
